systemd (215-5ubuntu1) UNRELEASED; urgency=medium

  * Merge with Debian unstable. Remaining Ubuntu changes:
    - Create disk/by-partlabel links for mmcblk partitions.
    - Hack to support system-image read-only /etc, and modify files in
      /etc/writable/ instead.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 12 Oct 2014 17:29:00 +0200

systemd (215-6) UNRELEASED; urgency=medium

  * Cherry-pick upstream patch to fix udev crash in link_config_get().
  * Cherry-pick upstream patch to fix tests in limited schroot environments.
  * Add d/p/Add-env-variable-for-machine-ID-path.patch: Allow specifying an
    alternate /etc/machine-id location. This is necessary for running tests
    as long as it isn't in our base images (see Debian #745876)
  * Run tests during package build. For the first round don't make them fatal
    for now (that will happen once we see results from all the architectures).
  * Drop our Check-for-kmod-binary.patch as the upstream patch
    units-conditionalize-static-device-node-logic-on-CAP.patch supersedes it.
  * Drop Use-comment-systemd.-syntax-in-systemd.mount-man-pag.patch, as
    our util-linux is now recent enough. Bump dependency to >= 2.21.

 -- Martin Pitt <mpitt@debian.org>  Sun, 12 Oct 2014 17:29:00 +0200

systemd (215-5) unstable; urgency=medium

  [ Martin Pitt ]
  * Unblacklist hyperv_fb again, it is needed for graphical support on Hyper-V
    platforms. Thanks Andy Whitcroft! (LP: #1359933)
  * Bump systemd-shim Depends/Breaks to 8-2 to ensure a lockstep upgrade.
    (Closes: #761947)

  [ Sjoerd Simons ]
  * d/p/sd-bus-Accept-no-sender-as-the-destination-field.patch
    + Fix compatibility between systemctl v215 and v208. Resolves issue when
      reloads of services is requested before systemd is re-execed
      (Closes: #762146)

  [ Michael Biebl ]
  * Don't overmount existing /run/user/<UID> directories with a per-user tmpfs
    on upgrades. (Closes: #762041)